# AqaraPresenceSensorFP2ReverseEngineering

./: .gitignore  PROTOCOL.md  README.md  debug_schema.py  decoded_add_ee.txt  decoded_add_int.txt  decoded_ai.txt  decoded_conf_zone.txt  decoded_enter_exit.txt  decoded_fw_head.txt  decoded_setup.txt  decoded_sleep.txt  pyproject.toml  sniff_uart_bidir.py
decoder/: cli.py  crc.py  framer.py  hello.py  protocol.py  pyproject.toml  sniffer.py  visualizer.py
test_decode/: CAPTURES.md  boot_with_two_zones.txt  run.py  sniff_data_add_enter_exit_zone.txt  sniff_data_add_interference_zone.txt  sniff_data_ai_learning_process.txt  sniff_data_configure_zone.txt  sniff_data_enable_disable_ai_person_detection_option.txt  sniff_data_enable_disable_ai_person_detection_option2.txt  sniff_data_install_configure_sleep_detection.txt  sniff_data_setup_zone_detection.txt  sniff_data_various_config_options.txt  sniff_data_zone_enter_exit.txt  test_data.txt  test_data2.txt  test_data3.txt  test_data4.txt
